# SmartSystemsSoftware

./: README.md
ArtificialIntelligence/: Chapter4.ipynb  Chapter5.ipynb  Chapter6.ipynb  Chapter7.ipynb  (+1 more)
SensorMotionRobotics/lab4/pub_department_number/: CMakeLists.txt  package.xml
SensorMotionRobotics/lab4/pub_department_number/launch/: pub_department_number.launch
SensorMotionRobotics/lab4/pub_department_number/src/: pub_department_number.cpp
SensorMotionRobotics/lab4/pub_major/: CMakeLists.txt  package.xml
SensorMotionRobotics/lab4/pub_major/launch/: pub_major.launch
SensorMotionRobotics/lab4/pub_major/src/: pub_major.cpp
SensorMotionRobotics/lab4/pub_subject/: CMakeLists.txt  package.xml
SensorMotionRobotics/lab4/pub_subject/launch/: pub_subject.launch
SensorMotionRobotics/lab4/pub_subject/src/: pub_subject.cpp
SensorMotionRobotics/lab4/string_merger/: CMakeLists.txt  package.xml
SensorMotionRobotics/lab4/string_merger/include/: string_merger.hpp
SensorMotionRobotics/lab4/string_merger/launch/: string_merger.launch
SensorMotionRobotics/lab4/string_merger/src/: string_merger.cpp
SensorMotionRobotics/lab7/calc_base2end_tf/: CMakeLists.txt  package.xml
SensorMotionRobotics/lab7/calc_base2end_tf/include/: calc_base2end_tf.hpp
SensorMotionRobotics/lab7/calc_base2end_tf/launch/: calc_base2end_tf.launch
SensorMotionRobotics/lab7/calc_base2end_tf/src/: calc_base2end_tf.cpp
SensorMotionRobotics/mobile_robot/: CMakeLists.txt  package.xml
SensorMotionRobotics/mobile_robot/include/: mobile_robot_odometry.hpp  state_publisher.hpp
SensorMotionRobotics/mobile_robot/launch/: mobile_robot_gazebo.launch  mobile_robot_rviz.launch
SensorMotionRobotics/mobile_robot/src/: state_publisher.cpp
SensorMotionRobotics/mobile_robot_description/: CMakeLists.txt
SensorMotionRobotics/mobile_robot_description/urdf/: mobile_robot.urdf.xacro
SensorMotionRobotics/week11/fourth_robot_navigation/: CMakeLists.txt  package.xml
SensorMotionRobotics/week11/fourth_robot_navigation/cfg/: costmap_common_params.yaml  dwa_local_planner_params.yaml
SensorMotionRobotics/week11/fourth_robot_navigation/launch/: fourth_robot_gazebo.launch  fourth_robot_localization.launch  fourth_robot_mapping.launch  fourth_robot_move_base.launch
SensorMotionRobotics/week11/fourth_robot_navigation/map/: playground.pgm  playground.yaml
SensorMotionRobotics/week3/my_subscriber/: CMakeLists.txt  package.xml
SensorMotionRobotics/week3/my_subscriber/launch/: my_subscriber.launch
SensorMotionRobotics/week3/my_subscriber/src/: my_subscriber.cpp
SensorMotionRobotics/week3/my_turtlesim_controller/: CMakeLists.txt  package.xml
SensorMotionRobotics/week3/my_turtlesim_controller/launch/: my_turtlesim_controller.launch
SensorMotionRobotics/week3/my_turtlesim_controller/src/: my_turtlesim_controller.cpp
SensorMotionRobotics/week4/my_publisher_class/: CMakeLists.txt
SensorMotionRobotics/week4/my_publisher_class/include/: my_publisher_class.hpp
SensorMotionRobotics/week4/my_publisher_class/launch/: my_publisher_class.launch
SensorMotionRobotics/week4/my_publisher_class/src/: my_publisher_class.cpp
SensorMotionRobotics/week4/my_subscriber_class/: CMakeLists.txt  package.xml
SensorMotionRobotics/week4/my_subscriber_class/include/: my_subscriber_class.hpp
SensorMotionRobotics/week4/my_subscriber_class/launch/: my_subscriber_class.launch
SensorMotionRobotics/week4/my_subscriber_class/src/: my_subscriber_class.cpp
SensorMotionRobotics/week4/random_gen_x/: CMakeLists.txt  package.xml
SensorMotionRobotics/week4/random_gen_x/include/: random_gen_x.hpp
SensorMotionRobotics/week4/random_gen_x/launch/: random_gen_x.launch
SensorMotionRobotics/week4/random_gen_x/msg/: control_msg.msg
SensorMotionRobotics/week4/random_gen_x/src/: random_gen_x.cpp
SensorMotionRobotics/week4/random_turtlesim_controller/: CMakeLists.txt  package.xml
SensorMotionRobotics/week4/random_turtlesim_controller/include/: random_turtlesim_controller.hpp
SensorMotionRobotics/week4/random_turtlesim_controller/launch/: random_turtlesim_controller.launch
SensorMotionRobotics/week4/random_turtlesim_controller/src/: random_turtlesim_controller.cpp
SensorMotionRobotics/week5/my_client/: CMakeLists.txt  package.xml
SensorMotionRobotics/week5/my_client/launch/: my_client.launch
SensorMotionRobotics/week5/my_client/src/: my_client.cpp
SensorMotionRobotics/week5/my_client_class/: CMakeLists.txt  package.xml
SensorMotionRobotics/week5/my_client_class/include/: my_client_class.hpp
SensorMotionRobotics/week5/my_client_class/launch/: my_client_class.launch
SensorMotionRobotics/week5/my_client_class/src/: my_client_class.cpp
SensorMotionRobotics/week5/my_server_class/: CMakeLists.txt  package.xml
SensorMotionRobotics/week5/my_server_class/include/: my_server_class.hpp
SensorMotionRobotics/week5/my_server_class/launch/: my_server_class.launch
SensorMotionRobotics/week5/my_server_class/src/: my_server_class.cpp
SensorMotionRobotics/week6/my_tf_practice/: CMakeLists.txt  package.xml
SensorMotionRobotics/week6/my_tf_practice/launch/: my_tf_practice.launch
SensorMotionRobotics/week6/my_tf_practice/src/: my_tf_practice.cpp
SensorMotionRobotics/week7/eigen_practice/: CMakeLists.txt  package.xml
SensorMotionRobotics/week7/eigen_practice/src/: eigen_practice.cpp
SensorMotionRobotics/week7/get_homogeneous_transform/: CMakeLists.txt  package.xml
SensorMotionRobotics/week7/get_homogeneous_transform/src/: get_homogeneous_transform.cpp
SensorMotionRobotics/week7/ur5_description/: CMakeLists.txt  package.xml
SensorMotionRobotics/week7/ur5_description/launch/: ur5_description.launch
SensorMotionRobotics/week8/open_manipulator/open_manipulator_gazebo/: CMakeLists.txt  package.xml
SensorMotionRobotics/week9/mobile_robot/: CMakeLists.txt  package.xml
SensorMotionRobotics/week9/mobile_robot/include/: state_publisher.hpp
SensorMotionRobotics/week9/mobile_robot/launch/: mobile_robot_gazebo.launch  mobile_robot_rviz.launch
SensorMotionRobotics/week9/mobile_robot/src/: state_publisher.cpp
(+354 files in other folders)
