<?xml version="1.0"?>
<package format="2">
    <name>open_manipulator_gazebo</name>
    <version>0.0.0</version>
    <description>The open_manipulator_gazebo package</description>

    <maintainer email="pseeej@gmail.com">pseeej</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>urdf</build_depend>
    
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>urdf</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>urdf</exec_depend>

    <export>

    </export>
</package>
